--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,22 @@ body {
     letter-spacing: 0.03em;
 }
 
+.contacts {
+    font-style: normal;
+}
+
+.visually-hidden {
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    margin: -1px;
+}
 
 /* header */
 .logo {
@@ -48,6 +64,7 @@ body {
 
 .hero-title {
     font-weight: 900;
+    color: var(--secondary-accent-color-white);
     font-size: 44px;
     line-height: 1.36;
     text-align: center;
@@ -59,6 +76,12 @@ body {
     font-size: 16px;
     line-height: 1.88;
     align-items: center;
+    font-family: inherit;
+}
+
+.hero-button:hover,
+.hero-button:focus {
+    background-color: #188CE8;
 }
 
 .features .list-title {
@@ -68,8 +91,7 @@ body {
     text-transform: uppercase;
 }
 
-.section-passage {
-    font-weight: 400;
+.features .section-passage {
     font-size: 14px;
     line-height: 1.71;
 }
@@ -87,10 +109,17 @@ body {
     line-height: 1.18;
 }
 
-.section-passage {
-    font-weight: 400;
+.team .section-passage {
     font-size: 16px;
     line-height: 1.18;
+}
+
+.team {
+    background-color: #F5F4FA;
+}
+
+.team .list-item {
+    background-color: var(--secondary-accent-color-white);
 }
 
 
@@ -105,6 +134,7 @@ body {
 
 .site-nav .link {
     color: var(--primary-title-color-black);
+    font-weight: 500;
     text-decoration: none;
 }
 
@@ -127,11 +157,6 @@ body {
     background-color: var(--secondary-background-color-grey);
 }
 
-.hero-title {
-    color: var(--secondary-accent-color-white);
-    text-transform: uppercase;
-}
-
 .hero-button {
     color: var(--secondary-accent-color-white);
     background-color: var(--primary-accent-color-blue);
@@ -145,11 +170,6 @@ body {
     color: var(--primary-title-color-black);
 }
 
-
-.features .list-title {
-    text-transform: uppercase;
-}
-
 .section-passage {
     color: var(--primary-text-color-grey);
 }
@@ -158,7 +178,6 @@ body {
 /* footer */
 .physical-address {
     color: var(--secondary-accent-color-white);
-    font-weight: 400;
     font-size: 14px;
     line-height: 1.71;
     text-decoration: none;
@@ -166,7 +185,6 @@ body {
 
 .contact-us {
     color: rgba(255, 255, 255, 60);
-    font-weight: 400;
     font-size: 14px;
     line-height: 1.71;
     text-decoration: none;
@@ -204,6 +222,7 @@ body {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.62;
+    font-family: inherit;
 }
 
 .works-title {
@@ -213,7 +232,6 @@ body {
 }
 
 .works-description {
-    font-weight: 400;
     font-size: 16px;
     line-height: 1.85;
 }
@@ -239,13 +257,6 @@ body {
     color: var(--primary-accent-color-blue);
 }
 
-.contacts {
-    all: initial;
-    font-family: Roboto, sans-serif;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.71x;
-}
 
 .physical-address:hover,
 .physical-address:focus {
